--- a/1_Introduction/CMakeLists.txt
+++ b/1_Introduction/CMakeLists.txt
@@ -2,4 +2,22 @@
 # add_executable( Nom_de_la_cible fichier1.cpp fichier2.cpp ... fichierN.cpp )
 # avec le ou les fichiers à compiler
 
-add_executable( Ex1-0-Hello_World Ex1-0.cpp )
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wconversion -Wsign-conversion -pedantic")
+
+# Ex 0
+#add_executable( Ex1-0-Hello_World Ex1-0.cpp)
+
+# Ex 1
+#add_executable( Ex1-1 Ex1-1.cpp)
+#add_executable( MonEx1-1 MonEx1-1.cpp)
+
+# Ex 2
+#add_executable( Ex1-2 Ex1-2.cpp)
+
+# Ex 3
+add_executable( Ex1-3 Ex1-3.cpp)
+
+# Ex 4
+add_executable( Ex1-4 Ex1-4.cpp)
+
